shim/third-party/rust/vendor/ref-cast-1.0.9/tests/ui/no-repr.rs
use ref_cast::RefCast;

#[derive(RefCast)]
struct Test {
    s: String,
}

fn main() {}
